# toDoList

./: README.md  pyproject.toml
src/client/: grpc_client.py
src/protos/: todo.proto  user.proto
src/pygrpc/: todo_pb2.py  todo_pb2.pyi  todo_pb2_grpc.py  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
tests/: test_json_connection.py
toDoList/: __main__.py
toDoList/client/: __init__.py
toDoList/protos/: user.proto
toDoList/pygrpc/: __init__.py  todo_pb2.py  todo_pb2_grpc.py  user_pb2.py  user_pb2.pyi
toDoList/server/: __init__.py  database.py  grpc_server.py  json_database.py
